# BackEndinPython

./: .gitignore
bePy/: README.md  alembic.ini  main.py  pyproject.toml  timesync.db
bePy/.github/: copilot-instructions.md
bePy/alembic/: env.py
bePy/alembic/versions/: 094b8df49560_alarm_mess.py  128f05640c36_schedule.py  1fe1099481ad_update_device_storage_intergration_user.py  48076378d8ef_ok_last_i_hope.py  485136cdac95_ok.py  4c71e6bb2f85_add_channel_and_event_to_alarm_messages.py  5363f691e6c2_them_cai_monitor_setting.py  645ed8c382ba_update_channel_model_extension_vì_zero_.py  6c78eb3ac62f_update_bit_rate_channel.py  6ef9f8b6042d_fuck_all_this_permission_and_shit.py  8a4a4635ddc5_1_ty_table.py  8c25544e0e1a_xóa_user_xóa_device.py  8d358e4d5b55_thêm_column_channel.py  8f026358d516_.py  9c08c94ca10e_how_tf_i_never_notice.py  af289607a163_chinh_channel_thêm_connected_type_và_bo_.py  bc463c4b4639_should_have_read_the_model_first.py  cadeea25a5dc_i_forgot.py  dc03693cd7f5_fuckkkk.py  dfac9d1ecdc0_table_for_channel.py  e3e1e1d2bb93_fcukkkkkkkkkkk.py  f78d26df5cf8_create_tables.py
bePy/app/: .env  main.py  models.py  routers.py
bePy/app/Models/: AlarmMessege.py  _init_.py  channel.py  channel_extensions.py  channel_recoding_mode_time_line.py  channel_record_day.py  channel_record_time_range.py  channel_recording_mode.py  channel_stream_config.py  device.py  device_integration_users.py  device_storage.py  (+9 more)
bePy/tests/: conftest.py  test_health.py
bePy/wwwroot/: alarm.html  channel.html  index.html  list.html  login.html  register.html  sync.html  usermanager.html
(+102 files in other folders)
