[project]
name = "bepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt==3.2.2",
    "cryptography>=46.0.3",
    "fastapi[standard]>=0.124.4",
    "ffmpeg-python>=0.2.0",
    "passlib[bcrypt]>=1.7.4",
    "ping3>=5.1.5",
    "psutil>=7.2.1",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]

